--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Think-X IT Solutions</title>
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/logo.png">
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <h2 class="logo">Think-X</h2>
         <nav>
@@ -70,10 +77,6 @@
         </form>
     </section>
 
-    <!-- Scroll to Top Button -->
-    <button id="scrollToTop" onclick="scrollToTop()"⬆️</button>
-
-    <!-- Footer Section -->
     <footer>
         <p>© 2025 Think-X. All Rights Reserved.</p>
     </footer>
